# genai

./: .gitignore  LICENSE  README.md  ai-test-1717737991.md  ai-test-1717738297.md  ai-test-1717740249.md  ai-test-1717741435.md  ai-test-1717936406.md  ai-test-1718144916.md  ai-test-1718146473.md  ai-test-1718175388.md  ai-test-1718250264.md  autosync_kb.py  requirements.txt  selfservicebot.py  streamlit.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: autosync.yml  python-app.yml
apps/api-security-scanner/: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api-security-scanner/.claude/: settings.json
apps/api-security-scanner/.claude/agents/: README.md  code-reviewer.md  performance-optimizer.md  python-specialist.md  testing-expert.md
apps/api-security-scanner/.claude/hooks/: INSTALLATION.md  README.md  TROUBLESHOOTING.md
apps/api-security-scanner/.claude/hooks/claude/: post-tool-use.json  pre-tool-use.json  session-hooks.json
apps/api-security-scanner/.claude/hooks/git/: commit-msg.sh  post-checkout.sh  post-merge.sh  pre-commit.sh
apps/api-security-scanner/.claude/hooks/utils/: check-coverage.sh  common.sh  run-security-checks.sh
apps/api-security-scanner/.claude/rules/: python-code-style.md  python-security.md  python-testing.md
apps/api-security-scanner/.claude/skills/: code-review-workflow.md  performance-analysis.md  refactoring-workflow.md  tdd-workflow.md
apps/api-security-scanner/docs/: DEVELOPMENT_WORKFLOW.md  PRD.md  TECHNICAL_SPEC_PART1.md  TECHNICAL_SPEC_PART2.md
apps/api-security-scanner/src/api_security_scanner/: __init__.py
apps/api-security-scanner/src/api_security_scanner/cli/: main.py
apps/api-security-scanner/tests/: conftest.py
apps/blogger/plans/: blog-automation-architecture-executive-summary.md  blog-automation-architecture-overview.md  blog-automation-challenges-mitigation-strategies.md  blog-automation-implementation-guide.md  blog-automation-implementation-roadmap.md  blog-automation-llm-evaluation.md
apps/claudeskills/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
apps/claudeskills/.claude/skills/add-tests/: SKILL.md
apps/claudeskills/.claude/skills/fastapi-endpoint/: SKILL.md
apps/claudeskills/.claude/skills/review-code/: SKILL.md
apps/claudeskills/.claude/skills/temporal-workflow/: SKILL.md
apps/claudeskills/claudeskills/: __init__.py
apps/claudeskills/claudeskills/activities/: __init__.py  data_processing_activities.py
apps/claudeskills/claudeskills/api/: __init__.py  main.py
apps/claudeskills/claudeskills/api/routes/: workflows.py
apps/claudeskills/claudeskills/api/schemas/: __init__.py  workflows.py
apps/claudeskills/claudeskills/core/: __init__.py  config.py  logging.py
apps/claudeskills/claudeskills/mcp/: __init__.py
apps/claudeskills/claudeskills/worker/: __init__.py  main.py
apps/claudeskills/claudeskills/workflows/: __init__.py  data_processing_workflow.py
apps/claudeskills/docs/: PHASE1_COMPLETE.md  SETUP.md  SKILLS_GUIDE.md  STEP2_COMPLETE.md  prd.md
apps/claudeskills/tests/: __init__.py  conftest.py
apps/claudeskills/tests/activities/: __init__.py
apps/claudeskills/tests/api/: test_main.py  test_workflows.py
apps/claudeskills/tests/core/: __init__.py  test_config.py
apps/claudeskills/tests/workflows/: __init__.py  test_data_processing_workflow.py
apps/secbot/: README.md  selfservicebot.py  streamlit.py  test.py
apps/secbot/docs/: cloudflare_terraform.md  test_gha_role_deny.md
apps/tools/roo-code/templates/.roo/: README-OPTIMIZATION.md
docs/: cloudflare_total_tls.tf  config.md  config_bad.md  config_good.md  pull_request.md  selfservicebot-usage-guide.md  unstructured_config.md
mcp/todo-mcp-server/: .dockerignore  .env.example  DOCKER_QUICK_START.md  Dockerfile.api  Dockerfile.mcp  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  requirements.txt
mcp/todo-mcp-server/docs/: DEPLOYMENT_SUMMARY.md  DOCKER_DEPLOYMENT.md  GETTING_STARTED.md  todo-journey-complete-story.md  todo-mcp-implementation-guide.md  todo-mcp-server-architecture.md
mcp/todo-mcp-server/src/todo_mcp_server/: __init__.py  cli.py  server.py
mcp/todo-mcp-server/src/todo_mcp_server/api/: main.py  models.py  storage.py
mcp/todo-mcp-server/src/todo_mcp_server/tools/: __init__.py  create_todo.py  get_todos.py
mcp/todo-mcp-server/src/todo_mcp_server/utils/: context.py  http_client.py  logger.py
tools/claude-code/templates/: CLAUDE.md  README.md
tools/claude-code/templates/python-project/: CLAUDE.md  README.md  SETTINGS-README.md
tools/claude-code/templates/python-project/.claude/: settings.json  settings.local.json.example
tools/roo-code/templates/: .rooignore  README.md
tools/roo-code/templates/.roo/: OPTIMIZATION-VERIFICATION.md
tools/roo-code/templates/.roo/rules/: 00-critical-core.md  01-pr-reviews.md  09-documentation-standards.md  10-commit-standards.md  (+1 more)
tools/roo-code/templates/.roo/rules-archive/: 02-python-standards.md
tools/roo-code/templates/.roo/rules-code/: task-execution.md
tools/roo-code/templates/.roo/rules-devops/: cicd-standards.md  docker-standards.md  iac-standards.md
(+34 files in other folders)
